--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+body{
+  background-color: rgb(248, 240, 240);
+  color: rgb(5, 27, 25);
+  font-family: 'Roboto', sans-serif;
+}
+.header{
+  margin: 3rem 2rem;
+  padding: 5rem 0;
+}
+.name{
   text-align: center;
+  font-size: 3.5rem;
+  font-weight: 800;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hello-ranjith{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 2rem;
 }
-
-.App-link {
-  color: #61dafb;
+.hello{
+  text-align: center;
+  font-size: 1.5rem;
+  border-radius: 2rem;
+  border: 1px solid rgb(128, 31, 79);
+  cursor: pointer;
+  font-weight: 800;
+  background-color: rgb(248, 240, 240);
+  color: rgb(128, 31, 79);
+  padding: 0.7rem;
+  text-decoration: none;
+  opacity: 0.8;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.hello:hover{
+  opacity: 1;
+}
+.profession{
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.content-container{
+  background-color: rgb(230, 238, 232);
+  color: rgb(14, 44, 70);
+  padding: 2rem ;
+}
+.heading{
+  text-align: center;
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: rgb(34, 111, 156);
+}
+.content{
+  margin: 0.5rem auto;
+  width: 85%;
+  font-size:1.3rem;
+  font-weight: 500;
+}
+.resume{
+  margin: 0.5rem auto 1rem auto;
+  width: 85%;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+img{
+  width: 17rem;
+  height: 19rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  opacity: 0.7;
+  margin-bottom: 1.5rem;
+}
+img:hover{
+  opacity: 1;
+}
+.grouped-images{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+}
+.skill-table{
+  border-radius: 1rem;
+  padding: 0.7rem;
+  border: 1px solid rgb(133, 108, 115);
+  margin-bottom: 2rem;
+}
+.stack-name{
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.7rem;
+  color: rgb(102, 69, 163);
+}
+.skills{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+  margin: auto 4rem;
+}
+.skills-list{
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+.profiles{
+  margin: 1rem auto;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.hello-container{
+  text-align: center;
+  margin: 3rem auto;
+}
+input{
+  padding: 1rem;
+  border: 1px solid rgb(243, 238, 238);
+  border-radius: .5rem;
+  margin-bottom: 2rem;
+}
+textarea{
+  padding: 1rem;
+  border: 1px solid rgb(243, 238, 238);
+  border-radius: .5rem;
+  margin-bottom: 2rem;
+  width: 17rem;
+  height: 7rem;
+}
+.send-message{
+  margin: auto;
+  width: fit-content;
+}
+@media(min-width:700px){
+  .skills{
+  grid-template-columns: 1fr 1fr ;
   }
 }
