--- a/src/App.css
+++ b/src/App.css
@@ -69,11 +69,11 @@ img{
   height: 19rem;
   border-radius: 0.5rem;
   cursor: pointer;
-  opacity: 0.7;
+  opacity: 1;
   margin-bottom: 1.5rem;
 }
 img:hover{
-  opacity: 1;
+  opacity: 0.8;
 }
 .grouped-images{
   display: flex;
@@ -128,8 +128,8 @@ textarea{
   height: 7rem;
 }
 .send-message{
-  margin: auto;
   width: fit-content;
+  padding: 0.2rem;
 }
 @media(min-width:700px){
   .skills{
